<resources>
    <string name="app_name">AppKEA4Patitas</string>
    <string name="valetusuariologin">Ingrese su usuario</string>
    <string name="valetpasswordlogin">Ingrese su password</string>
    <string name="valbtnlogin">INGRESAR</string>
    <string name="valetnombrereg">Ingrese su nombre</string>
    <string name="valetapellidoreg">Ingrese su apellido</string>
    <string name="valetemailreg">Ingrese su email</string>
    <string name="valetcelularreg">Ingrese su número de celular</string>
    <string name="valetusuarioreg">Ingrese su usuario</string>
    <string name="valetpasswordreg">Ingrese su password</string>
    <string name="valetpasswordrep">Vuelva a ingresar su pasword</string>
    <string name="valbtnregistrar">REGISTRAR USUARIO</string>
    <string name="valtvregresarlogin">Si ya tienes cuenta ingresa al app aquí.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtvregistrarusuario">Si no tienes cuenta, registrate aquí.</string>
    <string name="msgusupassword">Es obligatorio su usuario y password.</string>
    <string name="msgerroregistro">Todos los datos son obligatorios.</string>
    <string name="errorapirest">Algo va mal, intentarlo nuevamente!</string>
    <string name="msgerrorlogin">Usuario o password incorrecto.</string>
    <string name="valcbrecordar">¿Recordar datos?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavlistafragment">Mascotas Perdidas</string>
    <string name="valnavvoluntariofragment">Únete a nosotros</string>
    <string name="valtvtitulovoluntario">ÚNETE A NUESTRO EQUIPO</string>
    <string name="valtvtextovoluntario">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="valcbaceptarvoluntario">Aceptar términos y condiciones</string>
    <string name="valbtnregvoluntario">REGISTRAR VOLUNTARIO</string>
    <string name="msgerroregvoluntario">Debe aceptar los términos y condiciones.</string>
    <string name="msgvoluntario">MUCHAS GRACIAS POR UNIRTE A NUESTRO EQUIPO !!</string>
    <string name="valcbrecordarcheck">Quitar el check para ingresar con otro usuario.</string>
    <string name="action_cerrar">Salir del App</string>
</resources>