<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragments.VoluntarioFragment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_pets_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtitulovoluntario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/valtvtitulovoluntario"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvtextovoluntario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valtvtextovoluntario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitulovoluntario" />

    <CheckBox
        android:id="@+id/cbaceptarvoluntario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valcbaceptarvoluntario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtextovoluntario" />

    <Button
        android:id="@+id/btnregvoluntario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/valbtnregvoluntario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbaceptarvoluntario" />
</androidx.constraintlayout.widget.ConstraintLayout>